# opentherm

./: .gitignore  LICENSE
arduino/: arduino_data_structures.h  arduino_opentherm_ds.h  arduino_opentherm_io.h
arduino-passthrough/: Makefile  arduino-passthrough.ino  sketch.json
arduino/loopback/: Makefile  loopback.ino
arduino/passthrough/: FreeRTOSConfig.h  Makefile  passthrough.ino  readlog.cpp  reset.py
arduino/passthrough/readlog/: .gitignore  Makefile  readlog.cpp
arduino/readlog/: Makefile  readlog.cpp
arduino/slave/: slave.ino
include/opentherm/: application.h  ds.h  pid.h  transport.h
pico/: CMakeLists.txt  README.md  flash.cfg  flash.sh  lwipopts.h  main.cpp  openocd.cfg  opentherm.pio  pico_opentherm_ds.h  reset.cfg  reset.sh
pico/cli/: CMakeLists.txt  mqtt2pq.cpp  otcli.cpp
sim/: Makefile  setspeed.cpp  setspeed.h  sim.cpp  sim.py
tests/: CMakeLists.txt  pid_tests.cpp
